--- a/src/cosy/webclient/profile/show.html
+++ b/src/cosy/webclient/profile/show.html
@@ -1,31 +1,77 @@
 <div class="col-md-12 col-centered">
   <form class="form-signin">
-    <h2 class="form-signin-heading">{{username}}</h2>
+    <h2 class="form-signin-heading">{{identifier}}</h2>
     <div class="col-md-4">
       <div id="avatar-group"
            class="form-group has-feedback">
-        <div id="avatar"
-             style="width:150px;height:150px;border:1px solid #000;text-align:center;margin:auto;">
-          <img width="100%"
+        <div style="width:150px;height:150px;border:1px solid #000;text-align:center;margin:auto;">
+          <img id="avatar"
+               width="100%"
+               src="data:image/*;base64,{{{avatar}}}"
                alt="{{{profile:avatar}}}" />
         </div>
-        {{#edit}}
-        <label>
-          <input id="avatar-button"
-                 type="file"
-                 class="form-control"/>
-          {{profile:avatar-upload}}
-        </label>
-        {{/edit}}
       </div>
-      <div id="username-group"
-           class="form-group has-feedback">
-        <h2>{{username}}</h2>
+      <div id="position-group"
+           class="form-group">
+        <label class="control-label"
+               for="position">{{profile:position}}
+        </label>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-map" ></i></span>
+          <input type="text"
+                 id="address"
+                 class="form-control has-feedback"
+                 value="{{address}}"
+                 required
+                 disabled />
+        </div>
+        <div id="position"
+             style="height: 400px;">
+        </div>
       </div>
     </div>
     <div class="col-md-8">
-      <div id="email-group"
+      <div id="name-group"
            class="form-group">
+        <label class="control-label"
+               for="name">{{profile:name}}</label>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-user" ></i></span>
+          <input type="text"
+                 id="name"
+                 class="form-control has-feedback"
+                 value="{{name}}"
+                 disabled />
+        </div>
+      </div>
+      <div id="organization-group"
+           class="form-group">
+        <label class="control-label"
+               for="organization">{{profile:organization}}</label>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-institution" ></i></span>
+          <input type="text"
+                 id="organization"
+                 class="form-control has-feedback"
+                 value="{{organization}}"
+                 disabled />
+        </div>
+      </div>
+      <div id="homepage-group"
+           class="form-group">
+        <label class="control-label"
+               for="homepage">{{profile:homepage}}</label>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-home" ></i></span>
+          <input type="url"
+                 id="homepage"
+                 class="form-control has-feedback"
+                 value="{{homepage}}"
+                 disabled />
+        </div>
+      </div>
+      <div id="email-group"
+           class="form-group {{^checked}}has-error{{/checked}}">
         <label class="control-label"
                for="email">{{profile:email}}</label>
         <div class="input-group">
@@ -33,40 +79,10 @@
           <input type="email"
                  id="email"
                  class="form-control has-feedback"
-                 placeholder="{{email}}"
-                 required />
-          </div>
-        <div id="email-error"
-             class="help-block with-errors"></div>
-      </div>
-      <div id="password-group"
-           class="form-group">
-        <div class="col-md-6 col-centered">
-          <label class="control-label"
-                 for="password-1">{{profile:password-1}}</label>
-          <div class="input-group">
-            <span class="input-group-addon"><i class="fa fa-key" ></i></span>
-            <input type="password"
-                   id="password-1"
-                   class="form-control has-feedback"
-                   placeholder="{{profile:password-1}}"
-                   required>
-          </div>
+                 value="{{email}}"
+                 required
+                 disabled />
         </div>
-        <div class="col-md-6 col-centered">
-          <label class="control-label"
-                 for="password-2">{{profile:password-1}}</label>
-          <div class="input-group">
-            <span class="input-group-addon"><i class="fa fa-key" ></i></span>
-            <input type="password"
-                   id="password-2"
-                   class="form-control has-feedback"
-                   placeholder="{{profile:password-2}}"
-                   required>
-          </div>
-        </div>
-        <div id="password-error"
-             class="help-block with-errors"></div>
       </div>
     </div>
   </form>
