--- a/src/cosy/webclient/headbar/init.html
+++ b/src/cosy/webclient/headbar/init.html
@@ -14,7 +14,22 @@
       </button>
       <a id="home"
          class="navbar-brand"
-         href="#">{{title}}</a>
+         href="#">{{title}}
+      </a>
+    </div>
+    <div>
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="https://github.com/CosyVerif">
+            <i class="fa fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/CosyVerif/library/issues/new">
+            <i class="fa fa-bug"></i>
+          </a>
+        </li>
+      </ul>
     </div>
     <div id="headbar-user"></div>
   </div>
