--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -7,10 +7,13 @@
     <link rel="icon"
           href="/favicon.ico"
           type="image/png" />
-    <link href="css/bootstrap.css"
+    <link href="/css/bootstrap.min.css"
           rel="stylesheet"
           type="text/css" />
-    <link href="css/font-awesome.css"
+    <link href="/css/bootstrap-theme.min.css"
+          rel="stylesheet"
+          type="text/css" />
+    <link href="/css/font-awesome.min.css"
           rel="stylesheet"
           type="text/css" />
     <title>CosyVerif</title>
@@ -55,30 +58,30 @@
       coroutine.resume (co)
     </script>
 
-    <script src="js/jquery.js"
+    <script src="/js/jquery.min.js"
             type="text/javascript">
     </script>
-    <script src="js/bootstrap.js"
+    <script src="/js/bootstrap.min.js"
             type="text/javascript"
             async defer>
     </script>
-    <script src="js/bootbox.js"
+    <script src="/js/locationpicker.jquery.min.js"
             type="text/javascript"
             async defer>
     </script>
-    <script src="js/map.js?v=3&sensor=false&libraries=places"
-            type="text/javascript"
-            async defer>
-    </script>
-    <script src="js/position.js"
-            type="text/javascript"
-            async defer>
-    </script>
-    <script src="js/recaptcha.js?render=explicit"
+    <script src="/js/bootbox.min.js"
             type="text/javascript"
             async defer>
     </script>
     <script src="/js/lua.vm.js"
+            type="text/javascript"
+            async defer>
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false&libraries=places"
+            type="text/javascript"
+            async defer>
+    </script>
+    <script src="https://www.google.com/recaptcha/api.js?render=explicit"
             type="text/javascript"
             async defer>
     </script>
