--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -77,7 +77,7 @@
             type="text/javascript"
             async defer>
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false&libraries=places"
+    <script src="https://maps.googleapis.com/maps/api/js?v=3&libraries=places"
             type="text/javascript"
             async defer>
     </script>
