--- a/src/cosy/www/editor.html
+++ b/src/cosy/www/editor.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
           name="viewport" />
     <link rel="icon"
-          href="/favicon.ico"
+          href="/favicon.png"
           type="image/png" />
     <link href="/css/bootstrap.min.css"
           rel="stylesheet"
